[package]
name = "kube-forwarder"
version = "0.1.0"
edition = "2021"

[features]
default = ["native-tls", "kubederive", "ws", "latest", "runtime"]
kubederive = ["kube/derive"]
native-tls = ["kube/client", "kube/native-tls"]
rustls-tls = ["kube/client", "kube/rustls-tls"]
runtime = ["kube/runtime"]
ws = ["kube/ws"]
latest = ["k8s-openapi/v1_22"]

[dependencies]
kube = { version = "0.68.0", features = ["runtime","derive"] }
tokio-util = "0.6.8"
assert-json-diff = "2.0.1"
validator = { version = "0.14.0", features = ["derive"] }
futures = "0.3.17"
k8s-openapi = { version = "0.14.0", default-features = false }
log = "0.4.11"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.8.21"
tokio = { version = "1.14.0", features = ["full"] }
either = "1.6.1"
schemars = "0.8.6"
static_assertions = "1.1.0"
tar = "0.4.37"
tracing = "0.1.29"
tracing-subscriber = "0.3.3"
warp = { version = "0.3", default-features = false, features = ["tls"] }
http = "0.2.5"
json-patch = "0.2.6"
tower = { version = "0.4.6", features = ["limit"] }
tower-http = { version = "0.2.0", features = ["trace", "decompression-gzip"] }
hyper = { version = "0.14.13", features = ["client", "http1", "stream", "tcp"] }
thiserror = "1.0.29"
backoff = "0.4.0"
clap = { version = "3.0.10", features = ["derive"] }
aws-config = "0.3.0"
aws-types = { version = "0.3.0", features = ["hardcoded-credentials"] }
aws-sdk-s3 = "0.3.0"
aws-smithy-http = "0.33.1"
bytes = "1.1.0"
futures-util = "0.3.19"
indicatif = "0.17.0-beta.1"
term-painter = "0.3.0"
env_logger = "0.9.0"
