[package]
name = "kube-forwarder"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper-rustls = { version = "0.23.0" }
tokio-rustls = "0.23.4"
pretty_env_logger = "0.4"
http-body = { git = "https://github.com/hyperium/http-body", rev = "6d7dd17" }
http-body-util = { git = "https://github.com/hyperium/http-body", rev = "6d7dd17" }
bytes = "1.1.0"
tower-http = { version = "0.3.2", features = ["trace", "decompression-gzip"] }
kube = { version = "0.76.0", features = ["runtime", "derive", "rustls-tls", "client", "ws" ] }
k8s-openapi = { version = "0.16.0", features = ["v1_25"] }
warp = { version = "0.3", default-features = false, features = ["tls"] }
log = "0.4.11"
env_logger = "0.9.0"
rand = "0.8.5"
anyhow             = { version = "1" }
futures            = { version = "0" }
futures-core = "0.3"
futures-util = "0.3"
num-traits = "0.2"
hyper = { version="0.14.23", features = ["http1", "tcp", "server", "stream"]}
tokio              = { version = "1", features = [ "full" ] }
tower              = { version = "0" }
tracing            = { version = "0" }
tracing-subscriber = { version = "0", features = [ "fmt", "json", "env-filter", "smallvec" ], default-features = false }
pin-project = "1"
clap = { version = "3.0.10", features = ["derive"] }